docs/original_moodle/unidades/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-17-55.ceg/compilation.txt
Materia.java:48: error: incompatible types: Grupo[] cannot be converted to ArrayList<Grupo>
      this.grupos = new Grupo[totalGrupos];
                    ^
Materia.java:52: error: array required, but ArrayList<Grupo> found
        this.grupos[i] = new Grupo(this);
                   ^
Materia.java:59: error: array required, but ArrayList<Grupo> found
          this.grupos[j].agregarAlumno(this.inscripciones.get(k++).getAlumno());
                     ^
Materia.java:64: error: array required, but ArrayList<Grupo> found
        this.grupos[totalGrupos-1].agregarAlumno(this.inscripciones.get(i).getAlumno());
                   ^
Materia.java:66: error: incompatible types: boolean cannot be converted to int
      return totalGrupos > 0;
                         ^
5 errors
Not compiled
